Handle variable window sizes.

--- a/stack.css
+++ b/stack.css
@@ -1,7 +1,7 @@
 body {
   background: #929292;
   font-family: "Helvetica Neue";
-  margin: 40px auto 40px auto;
+  margin: auto;
   width: 1280px;
 }
 
