--- a/stack.css
+++ b/stack.css
@@ -6,7 +6,7 @@ body {
 }
 
 a {
-  color: steelblue;
+  color: #6baed6;
 }
 
 a:not(:hover) {
@@ -14,15 +14,19 @@ a:not(:hover) {
 }
 
 .stack {
-  background: #fff;
+  background: #000;
+  color: #fff;
   box-shadow: 0px 4px 8px rgba(0,0,0,.5);
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
   display: none;
-  font-size: 36px;
-  height: 640px;
-  line-height: 1.5em;
-  margin-bottom: 40px;
-  padding: 40px;
-  width: 1200px;
+  font-size: 48px;
+  height: 800px;
+  padding: 160px 80px;
+  width: 1280px;
   -webkit-transform: translate3d(0,0,0);
 }
 
@@ -31,16 +35,8 @@ a:not(:hover) {
   position: fixed;
 }
 
-
-h1 {
-  font-size: 72px;
-  margin-top: 0;
-}
-
-.big h1 {
-  text-align: center;
-  margin-top: 300px;
-  font-size: 256px;
+.grey {
+  color: #969696;
 }
 
 @media
@@ -48,7 +44,11 @@ screen and (-webkit-min-device-pixel-ratio: 2),
 screen and (min-device-width: 768px) and (max-device-width: 1024px),
 screen and (max-device-width: 480px) {
   body {
-    margin: 40px auto 40px auto;
+    width: 1200px;
+  }
+
+  .stack {
+    margin: 40px 0;
   }
 
   .stack {
